Add utility classes

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Reset margins */
@@ -21,19 +21,20 @@ h5,
 p,
 figure,
 picture {
-    margin: 0;
+  margin: 0;
 }
 
 /* Set Up The Body */
 body {
-    line-height: 1.5; 
-    min-height: 100vh;
+  line-height: 1.5;
+  min-height: 100vh;
 }
 
 /* Make Images Easier to Work With */
-img, picture {
-    min-width: 100%;
-    display: block;
+img,
+picture {
+  min-width: 100%;
+  display: block;
 }
 
 /* Make Form Elements (which do not inherit font by default) Easier to Work With */
@@ -41,17 +42,50 @@ input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
 /* Accessibility - remove animations for people who've turned them off in the browser or OS bcs of dizziness*/
-@media (prefers-reduced-motion: reduce) {  
-    *,
-    *::before,
-    *::after {
-      animation-duration: 0.01ms !important;
-      animation-iteration-count: 1 !important;
-      transition-duration: 0.01ms !important;
-      scroll-behavior: auto !important;
-    }
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
   }
+}
+
+/* ------------------------ */
+/* Utility Classes          */
+/* ------------------------ */
+
+.flex {
+    display: flex;
+    gap: var(--gap, 1rem); /* 1rem is default */
+}
+
+.grid {
+    display: grid;
+    gap: var(--gap, 1rem);
+}
+
+.container {
+    padding-inline: 2em; /* padding left-right */
+    margin-inline: auto; /* to center */
+    max-width: 80rem;
+}
+
+/* For Screen Readers Only - hides the element, accessible for screen readers*/
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border: 0;
+}
