--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ select {
 .bg-dark {
     background-color: hsl( var(--clr-dark) );
 }
-.bg-light {
+.bg-accent {
     background-color: hsl( var(--clr-light) );
 }
 .bg-white {
@@ -117,7 +117,7 @@ select {
 .text-dark {
     color: hsl( var(--clr-dark) );
 }
-.text-light {
+.text-accent {
     color: hsl( var(--clr-light) );
 }
 .text-white {
